@@ -43,6 +43,15 @@ applicationDefaultJvmArgs = ["-Dteamcity.helper.home=../work",
                              "-Dcom.sun.management.jmxremote.authenticate=false",
                              "-Dcom.sun.management.jmxremote.ssl=false"]
 
+/* add for running on Java 11
+["--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+    "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+    "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
+    "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
+    "--illegal-access=permit"]
+*/
+
 distributions {
     main {
         contents {
